@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-251: Allow to access the distributed cache from Vertexes and
+  WorkerContext (Gianmarco De Francisci Morales via aching).
+
   GIRAPH-261: Rename isQuiet variable. (Gianmarco De Francisci Morales 
   via jghoman).
 
